# nexus-logger

./: .clang-format  CMakeLists.txt  LICENSE  README.md
src/: main.cpp
src/common/types/: channels_names.hpp  message_types.hpp  pulse_types.hpp
src/common/utils/: ipc_utils.hpp  path_utils.hpp
src/core/ipc/: base_qnx_component.cpp  base_qnx_component.hpp  base_qnx_service.hpp
src/core/logger/: base_logger.cpp  base_logger.hpp  logger_macros.hpp  logger_service.cpp  logger_service.hpp
src/implementation/: console_logger.cpp  console_logger.hpp  file_logger.cpp  file_logger.hpp
src/internal/: ipc_utils.hpp  path_utils.hpp  time_utils.hpp
src/ipc/: base_qnx_component.cpp  base_qnx_component.hpp  base_qnx_service.cpp  base_qnx_service.hpp
src/logger/: base_logger.cpp  base_logger.hpp  logger_macros.hpp  logger_service.cpp  logger_service.hpp  logging_macros.h
src/sinks/: console_logger.cpp  console_logger.hpp  file_logger.cpp  file_logger.hpp
src/types/: message_types.hpp
